--- a/smart-parking-backend/pom.xml
+++ b/smart-parking-backend/pom.xml
@@ -95,6 +95,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Razorpay Payment Gateway -->
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
 	</dependencies>
 
 
