--- a/smart-parking-backend/src/main/resources/application.properties
+++ b/smart-parking-backend/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 
 spring.application.name=smart-parking-backend 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/smart_parking_refractored
-spring.datasource.username=root
-spring.datasource.password=Naruto@16
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/smart_parking_refractored}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -35,3 +35,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 ## H2 Console - Web Ui to see DB table, Debugging aid
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
+
+# Razorpay Configuration (Get these from https://dashboard.razorpay.com/app/keys)
+razorpay.key.id=YOUR_KEY_ID_HERE
+razorpay.key.secret=YOUR_KEY_SECRET_HERE
