Fix: Admin Panel UI, User Management, Payout Logic, and Prep for Deployment

--- a/smart-parking-backend/src/main/resources/application.properties
+++ b/smart-parking-backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=smart-parking-backend
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/smart_parking_refractored}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Naruto@16}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
