fixed TiDB quick close to max-time

--- a/smart-parking-backend/src/main/resources/application.properties
+++ b/smart-parking-backend/src/main/resources/application.properties
@@ -10,6 +10,13 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Naruto@16}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# HikariCP Configuration (Fix for "Failed to validate connection" warnings on Render/TiDB)
+# TiDB Serverless closes idle connections quickly. We set max-lifetime to 10 minutes (600000ms)
+# to ensure we recycle connections before the server kills them.
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.validation-timeout=3000
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
