Fix console error

--- a/smart-parking-backend/pom.xml
+++ b/smart-parking-backend/pom.xml
@@ -36,6 +36,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- DevTools for Hot Swapping / Live Reload -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+
 		<!-- JPA + HIBERNATE -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
